--- a/templates/show.html
+++ b/templates/show.html
@@ -39,7 +39,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-car"></i>
         </div>
@@ -195,7 +195,7 @@
                   <div class="form-group">
                     <label>Add link</label>
                     <div id="Youtubelinkcontainer">
-                      <input type="url" name="links[]" class="form-control" required />
+                      <input type="url" name="links[]" placeholder="Paste video link here." class="form-control" required />
                     </div>
                     <button type="button" id="addAnotherlink" class="btn btn-primary mt-2">
                       Add Another Link
@@ -237,7 +237,7 @@
                   {{ range $index, $link := .links }}
                   <tr>
                       <th scope="row">{{$index}}</th>
-                      <td>
+                      <td >
                           <a href="{{ $link.VideoLink }}" target="_blank">{{ $link.VideoLink }}</a>
                       </td>
                       <td>
