--- a/templates/show.html
+++ b/templates/show.html
@@ -289,17 +289,20 @@
               </tbody>
           </table>
           </div>
-
           <div class="clearfix">
-            <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+            <div class="hint-text">Showing <b>{{len .links}}</b> out of <b>{{.TotalCount}}</b> entries</div>
             <ul class="pagination">
-                <li class="page-item disabled"><a href="#">Previous</a></li>
-                <li class="page-item"><a href="#" class="page-link">1</a></li>
-                <li class="page-item"><a href="#" class="page-link">2</a></li>
-                <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                <li class="page-item"><a href="#" class="page-link">4</a></li>
-                <li class="page-item"><a href="#" class="page-link">5</a></li>
-                <li class="page-item"><a href="#" class="page-link">Next</a></li>
+                <li class="page-item {{if eq .Page 1}}disabled{{end}}">
+                    <a href="?page=1&limit={{.Limit}}" class="page-link">Previous</a>
+                </li>
+                {{range $i, $page := .Pages}}
+                <li class="page-item {{if eq $.Page $page}}active{{end}}">
+                    <a href="?page={{$page}}&limit={{$.Limit}}" class="page-link">{{$page}}</a>
+                </li>
+                {{end}}
+                <li class="page-item {{if eq .Page .TotalPages}}disabled{{end}}">
+                    <a href="?page={{.TotalPages}}&limit={{.Limit}}" class="page-link">Next</a>
+                </li>
             </ul>
         </div>
         
