--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
     />
 
     <link rel="icon" href="/static/icon/rrlogo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/css/mycode.css" />
+    <!-- <link rel="stylesheet" href="/static/css/mycode.css" /> -->
 
     <title>Amanimotors login</title>
 
@@ -27,18 +27,22 @@
           transform: translateX(-100%);
           opacity: 0;
         }
+
         25% {
           transform: translateX(25%);
           opacity: 0.25;
         }
+
         50% {
           transform: translateX(50%);
           opacity: 0.5;
         }
+
         75% {
           transform: translateX(75%);
           opacity: 0.75;
         }
+
         100% {
           transform: translateX(100%);
           opacity: 1;
@@ -49,12 +53,12 @@
         animation: zigzag 8s linear infinite;
         text-align: center;
         font-size: 24px;
-        color: white;
+        color: #000;
         margin-bottom: 20px;
       }
 
       .ring {
-        position: relative;
+        /* position: relative; */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -70,7 +74,7 @@
       .btn-primary {
         background-color: #007bff;
         border-color: #007bff;
-        color: #fff;
+        color: #000;
       }
 
       .btn-primary:hover {
@@ -79,42 +83,85 @@
       }
     </style>
   </head>
-  <body>
+
+  <body class="vh-100">
     <!-- animated login form div starts here -->
-    <div class="ring">
-      <h1 class="zigzag-text">Welcome to Amani Motors Login Page</h1>
-      <i style="--clr: #610979"></i>
-      <i style="--clr: #fc466b"></i>
-      <i style="--clr: #3f5efb"></i>
-      <div class="login">
-        <form action="/adminlogin" method="post" enctype="multipart/form-data">
-          <h2 style="text-align: center">login</h2>
-          <div class="inputBx">
-            <input
-              type="text"
-              name="username"
-              placeholder="Username"
-              required
-            />
+    <section class="h-full">
+      <div class="container p-5 h-100">
+        <div
+          class="row d-flex justify-content-center align-items-center h-100 m-0"
+        >
+          <div class="col col-xl-10">
+            <div class="card" style="border-radius: 1rem">
+              <div class="row g-0 m-0">
+                <div class="col-md-6 col-lg-5 d-none d-md-block">
+                  <img
+                    src="/static/img/loginBg.jpg"
+                    alt="login form"
+                    class="img-fluid"
+                    style="border-radius: 1rem 0 0 1rem"
+                  />
+                  <!-- <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" /> -->
+                </div>
+                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                  <div class="card-body p-4 p-lg-5 text-black">
+                    <form
+                      action="/adminlogin"
+                      method="post"
+                      enctype="multipart/form-data"
+                    >
+                      <div class="d-flex align-items-center mb-3 pb-1">
+                        <i
+                          class="fas fa-cubes fa-2x me-3"
+                          style="color: #ff6219"
+                        ></i>
+                        <span class="h1 fw-bold mb-0">Admin</span>
+                      </div>
+
+                      <div data-mdb-input-init class="form-outline mb-4">
+                        <input
+                          name="username"
+                          type="text"
+                          id="form2Example17"
+                          class="form-control form-control-md"
+                        />
+                        <label class="form-label" for="form2Example17"
+                          >Username</label
+                        >
+                      </div>
+
+                      <div data-mdb-input-init class="form-outline mb-4">
+                        <input
+                          name="password"
+                          type="password"
+                          id="form2Example27"
+                          class="form-control form-control-md"
+                        />
+                        <label class="form-label" for="form2Example27"
+                          >Password</label
+                        >
+                      </div>
+
+                      <div class="pt-1 mb-4">
+                        <button
+                          data-mdb-button-init
+                          data-mdb-ripple-init
+                          class="btn btn-primary btn-sm btn-block"
+                          type="submit"
+                        >
+                          Login
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="inputBx">
-            <br />
-            <br />
-            <input
-              type="password"
-              name="password"
-              placeholder="Password"
-              required
-            />
-          </div>
-          <br />
-          <br />
-          <div class="inputBx">
-            <input type="submit" value="Login" class="btn btn-primary" />
-          </div>
-        </form>
+        </div>
       </div>
-    </div>
+    </section>
     <!-- animated login dev end here -->
 
     <!-- Optional JavaScript -->
