--- a/templates/show.html
+++ b/templates/show.html
@@ -90,6 +90,16 @@
           <small>YouTube</small> <sup></sup>
         </div>
       </a>
+
+      <a class="sidebar-brand d-flex align-items-center justify-content-around w-full" href="/admin/get_brand_page">
+        <div style="font-size: 1rem;" class=" font-weight-normal">
+            <i class="fa fa-bold" aria-hidden="true"></i>
+
+        </div>
+        <div class="sidebar-brand-text font-weight-normal btn btn-sm btn-outline-light ">
+            <small>Brands</small> <sup></sup>
+        </div>
+    </a>
       <br>
       <br>
 
