--- a/templates/brand.html
+++ b/templates/brand.html
@@ -196,7 +196,7 @@
                 <div id="addCarModals" class="modal fade">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <form action="/admin/add_brand_page" method="post" enctype="multipart/form-data">
+                            <form action="/admin/add_brand" method="post" enctype="multipart/form-data">
                                 <div class="modal-header">
                                     <h4 class="modal-title">Brand Form</h4>
 
@@ -226,7 +226,7 @@
                 </div>
 
                 <!-- Table example -->
-                <div class="row ">
+                <div class="row">
                     <div style="max-width: 100%;overflow-x: scroll;" class="container">
                         <div class="table-responsive mt-3">
                             <div class="table-wrapper">
@@ -252,20 +252,18 @@
                                         <tr>
                                             <th scope="row">{{$index}}</th>
                                             <td>
-                                                <a href="{{ $brand.Name }}" target="_blank">{{ $brand.Name
-                                                    }}</a>
+                                                <a href="{{ $brand.Name }}" target="_blank">{{ $brand.Name }}</a>
                                             </td>
                                             <td>
-                                                <!-- Button to trigger the modal -->
+                                                <!-- Button to trigger the edit modal -->
                                                 <button type="button" class="btn btn-success" data-toggle="modal"
                                                     data-target="#editModal{{$brand.ID}}">
                                                     Edit
                                                 </button>
-
-                                                <!-- Modal -->
-                                                <div class="modal fade" id="editModal{{$brand.ID}}" tabindex="-1"
-                                                    role="dialog" aria-labelledby="editModalLabel{{$brand.ID}}"
-                                                    aria-hidden="true">
+                
+                                                <!-- Edit Modal -->
+                                                <div class="modal fade" id="editModal{{$brand.ID}}" tabindex="-1" role="dialog"
+                                                    aria-labelledby="editModalLabel{{$brand.ID}}" aria-hidden="true">
                                                     <div class="modal-dialog" role="document">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
@@ -278,20 +276,16 @@
                                                                 </button>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <!-- Form to edit the YouTube link -->
-                                                                <form
-                                                                    action="/admin/get_youtube_link_form_edit/{{ $brand.ID }}"
-                                                                    method="POST" enctype="multipart/form-data">
+                                                                <!-- Form to edit the brand name -->
+                                                                <form action="/admin/edit_brand/{{ $brand.ID }}" method="POST"
+                                                                    enctype="multipart/form-data">
                                                                     <div class="form-group">
-                                                                        <label for="editVideoLink">Update Brand</label>
-                                                                        <input type="text"
-                                                                            placeholder="eg:Mercedes Benz" name="brand"
+                                                                        <label for="editBrandName">Update Brand Name</label>
+                                                                        <input type="text" placeholder="e.g., Mercedes Benz"
+                                                                            value="{{$brand.Name}}" name="brand_name"
                                                                             class="form-control" required>
-                                           
                                                                     </div>
-                                                                    <button type="submit" class="btn btn-primary">
-                                                                        Save Changes
-                                                                    </button>
+                                                                    <button type="submit" class="btn btn-primary">Save Changes</button>
                                                                 </form>
                                                             </div>
                                                         </div>
@@ -299,11 +293,40 @@
                                                 </div>
                                             </td>
                                             <td>
-                                                <!-- Form to delete the YouTube link -->
-                                                <form action="/admin/get_youtube_link_form_delete/{{ $brand.ID }}"
-                                                    method="POST">
-                                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                                </form>
+                                                <!-- Button to trigger the delete modal -->
+                                                <button type="button" class="btn btn-danger" data-toggle="modal"
+                                                    data-target="#deleteModal{{$brand.ID}}">
+                                                    Delete
+                                                </button>
+                
+                                                <!-- Delete Modal -->
+                                                <div class="modal fade" id="deleteModal{{$brand.ID}}" tabindex="-1" role="dialog"
+                                                    aria-labelledby="deleteModalLabel{{$brand.ID}}" aria-hidden="true">
+                                                    <div class="modal-dialog" role="document">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title" id="deleteModalLabel{{$brand.ID}}">
+                                                                    Delete Brand
+                                                                </h5>
+                                                                <button type="button" class="close" data-dismiss="modal"
+                                                                    aria-label="Close">
+                                                                    <span aria-hidden="true">&times;</span>
+                                                                </button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <p>Are you sure you want to delete the brand {{$brand.Name}}?</p>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <!-- Form to submit delete request -->
+                                                                <form action="/admin/delete_brand/{{ $brand.ID }}" method="POST">
+                                                                    <button type="button" class="btn btn-secondary"
+                                                                        data-dismiss="modal">Cancel</button>
+                                                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                                                </form>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </td>
                                         </tr>
                                         {{ end }}
@@ -311,8 +334,7 @@
                                 </table>
                             </div>
                             <div class="clearfix">
-                                <div class="hint-text">Showing <b>{{len .brands}}</b> out of <b>{{.TotalCount}}</b>
-                                    entries</div>
+                                <div class="hint-text">Showing <b>{{len .brands}}</b> out of <b>{{.TotalCount}}</b> entries</div>
                                 <ul class="pagination">
                                     <li class="page-item {{if eq .Page 1}}disabled{{end}}">
                                         <a href="?page=1&limit={{.Limit}}" class="page-link">Previous</a>
@@ -327,11 +349,9 @@
                                     </li>
                                 </ul>
                             </div>
-
                         </div>
                     </div>
                 </div>
-
 
                 <!-- Begin Page Content -->
                 <!-- Scroll to Top Button-->
